[package]
name = "dices"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["dices", "random", "distribution", "statistics"]
categories = ["mathematics", "simulation"]
homepage = "https://github.com/tadeohepperle/dices"
description = "calculate discrete probability distributions and statistics for combinations of dices"
readme = "README.md"
repository = "https://github.com/tadeohepperle/dices"

[dependencies]
fraction = "0.11.1"
regex = "1"
rand = "0.8.5"
