[package]
name = "dices"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["dices", "random", "distribution", "statistics"]
categories = ["mathematics", "simulation"]
homepage = "https://github.com/tadeohepperle/dices"
description = "calculate discrete probability distributions and statistics for combinations of dices"
readme = "README.md"
repository = "https://github.com/tadeohepperle/dices"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["nowasm"]
wasm = ["dep:wasm-bindgen","dep:serde-wasm-bindgen","dep:serde", "dep:web-sys"]
nowasm =["dep:rand"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
fraction = "0.11.1"
regex = "1"
js-sys = "0.3.60"
web-sys = {version = "0.3.60", optional=true, features=["Window", "Performance"]}
wasm-bindgen = {version = "0.2.63", optional = true, features = ["serde-serialize"]}
serde = { version = "1.0", features = ["derive"], optional = true}
serde-wasm-bindgen = {version = "0.4", optional = true}
rand = {version = "0.8.5", optional=true}
console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "timing"
harness = false
crate-type = ["cdylib"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
debug = true

